# ctrlpt

./: .gitignore  Makefile.am  build.sh  configure.ac  libupnp.pc.in  libupnp.spec
ixml/: Makefile.am
sample/: Makefile.am  ctrlpt.c  ctrlpt.h
sample/common/: ctrlpt.c  ctrlpt.h  sample_util.c  sample_util.h
sample/linux/: ctrlpt_main.c
upnp/: Makefile.am
upnp/inc/: upnp.h  upnpconfig.h  upnpdebug.h  upnptools.h
upnp/src/api/: UpnpString.c  upnpapi.c  upnpdebug.c  upnptools.c
upnp/src/gena/: gena_callback2.c  gena_ctrlpt.c
upnp/src/genlib/miniserver/: miniserver.c
upnp/src/genlib/net/: sock.c
upnp/src/genlib/net/http/: httpparser.c  httpreadwrite.c  webserver.c
upnp/src/genlib/net/uri/: uri.c
upnp/src/inc/: client_table.h  config.h  gena.h  httpparser.h  miniserver.h  soaplib.h  ssdplib.h  upnpapi.h
upnp/src/soap/: soap_common.c  soap_ctrlpt.c
upnp/src/ssdp/: ssdp_ctrlpt.c  ssdp_server.c
util/: Makefile.am
util/inc/: debug.h  os.h
util/src/: debug.c  os_unix.c
